// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WeatherStamp props weathers renders 0 weather 1`] = `
<styled.div>
  <div
    className="column"
  >
    <label />
    <div
      className="row flexEnd"
    >
      <styled.label
        id="temp"
        size="2em"
      >
        undefined
      </styled.label>
      <sup>
        <styled.label
          id="unit"
          size="1.5em"
        >
          °
        </styled.label>
      </sup>
    </div>
  </div>
</styled.div>
`;

exports[`WeatherStamp props weathers renders 1 weather 1`] = `
<styled.div>
  <div
    className="column"
  >
    <label />
    <div
      className="row flexEnd"
    >
      <styled.label
        id="temp"
        size="2em"
      >
        undefined
      </styled.label>
      <sup>
        <styled.label
          id="unit"
          size="1.5em"
        >
          °
        </styled.label>
      </sup>
    </div>
  </div>
  <div
    className="columnCenter"
    id="weathers"
  >
    <div
      className="row"
      key="1"
    >
      <styled.div>
        <img
          src="http://openweathermap.org/img/w/10d.png"
        />
      </styled.div>
      <div
        className="columnCenter"
      >
        <label>
          Really cold
        </label>
      </div>
    </div>
  </div>
</styled.div>
`;

exports[`WeatherStamp renders correctly 1`] = `
<styled.div>
  <div
    className="column"
  >
    <label />
    <div
      className="row flexEnd"
    >
      <styled.label
        id="temp"
        size="2em"
      >
        undefined
      </styled.label>
      <sup>
        <styled.label
          id="unit"
          size="1.5em"
        >
          °
        </styled.label>
      </sup>
    </div>
  </div>
</styled.div>
`;
